// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clusters index renders no clusters 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <div
      className="card"
    >
      <div
        className="card-header"
      >
        Clusters
        <input
          className="cluster-search"
          defaultValue=""
          onChange={[Function]}
          placeholder="Search ..."
          type="text"
        />
      </div>
      <div
        className="card-body text-center"
      >
        <p
          className="card-text large-icon"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 "
            data-icon="search"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </p>
        <p
          className="card-text"
        >
          No clusters were found.
          <br />
          Try searching something else.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Clusters index renders with clusters 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <div
      className="card"
    >
      <div
        className="card-header"
      >
        Clusters
        <input
          className="cluster-search"
          defaultValue=""
          onChange={[Function]}
          placeholder="Search ..."
          type="text"
        />
      </div>
      <div
        className="card-body text-center"
      >
        <div
          className="row cluster-item"
        >
          <div
            className="col"
          >
            <p>
              <a
                href="/clusters/test1"
                onClick={[Function]}
              >
                test1
              </a>
            </p>
            <small>
              Name
            </small>
          </div>
          <div
            className="col"
          >
            <p>
              1
            </p>
            <small>
              Nodes
            </small>
          </div>
          <div
            className="col"
          >
            <p>
              <span
                className="db-icon mongodb"
                title="MongoDB"
              />
            </p>
            <small>
              MongoDB
            </small>
          </div>
        </div>
        <div
          className="row cluster-item"
        >
          <div
            className="col"
          >
            <p>
              <a
                href="/clusters/test2"
                onClick={[Function]}
              >
                test2
              </a>
            </p>
            <small>
              Name
            </small>
          </div>
          <div
            className="col"
          >
            <p>
              4
            </p>
            <small>
              Nodes
            </small>
          </div>
          <div
            className="col"
          >
            <p>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-database fa-w-14 "
                data-icon="database"
                data-prefix="fas"
                role="img"
                style={Object {}}
                title="Kafka"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M448 73.143v45.714C448 159.143 347.667 192 224 192S0 159.143 0 118.857V73.143C0 32.857 100.333 0 224 0s224 32.857 224 73.143zM448 176v102.857C448 319.143 347.667 352 224 352S0 319.143 0 278.857V176c48.125 33.143 136.208 48.572 224 48.572S399.874 209.143 448 176zm0 160v102.857C448 479.143 347.667 512 224 512S0 479.143 0 438.857V336c48.125 33.143 136.208 48.572 224 48.572S399.874 369.143 448 336z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </p>
            <small>
              Kafka
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
